--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
     "@prisma/client": "^4.11.0",
+    "@semantic-release/git": "^10.0.1",
+    "@semantic-release/github": "^8.0.7",
     "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.13",
     "@types/jest": "29.2.4",
@@ -54,6 +56,7 @@
     "jest": "29.3.1",
     "prettier": "^2.3.2",
     "prisma": "^4.11.0",
+    "semantic-release": "^21.0.0",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
     "ts-jest": "29.0.3",
