build: update script

--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "prisma:migrate:deploy": "prisma migrate deploy",
-    "dev:db:down": "sudo docker compose down",
-    "dev:db:up": "sudo docker compose up -d",
+    "dev:db:down": "docker compose down",
+    "dev:db:up": "docker compose up -d",
     "dev:db": "yarn dev:db:down && yarn dev:db:up && sleep 5 && yarn prisma:migrate:deploy",
     "dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
