--- a/.github/workflows/dockerize.yml
+++ b/.github/workflows/dockerize.yml
@@ -8,21 +8,45 @@ on:
   workflow_dispatch:
 
 jobs:
-  dockerize:
-    name: Build and push Docker images
+  # dockerize:
+  #   name: Build and push Docker images
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - name: Set up Docker
+  #       uses: docker-practice/actions-setup-docker@master
+  #       timeout-minutes: 30
+  #     - name: Set Up Checkout
+  #       uses: actions/checkout@v2
+  #     - run: ls -a
+  #     - name: Docker build
+  #       run: docker build -t sagarbera/nest-learn:1.0 ./
+  #     - name: Docker Login
+  #       run: docker login -u ${{ secrets.DOCKER_USER }} -p ${{ secrets.DOCKER_TOKEN }} docker.io
+  #     - name: Dockerhub push
+  #       run: docker push sagarbera/nest-learn:1.0
+  #       env:
+  #         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  build-push:
+    env:
+      IMAGE: sagarbera/nest-learn
     runs-on: ubuntu-latest
     steps:
-      - name: Set up Docker
-        uses: docker-practice/actions-setup-docker@master
-        timeout-minutes: 30
-      - name: Set Up Checkout
-        uses: actions/checkout@v2
-      - run: ls -a
-      - name: Docker build
-        run: docker build -t sagarbera/nest-learn:1.0 ./
-      - name: Docker Login
-        run: docker login -u ${{ secrets.DOCKER_USER }} -p ${{ secrets.DOCKER_PASSWORD }} docker.io
-      - name: Dockerhub push
-        run: docker push sagarbera/nest-learn:1.0
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      # These are prerequisites for the docker build step
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+      - name: Login to DockerHub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKER_USER }}
+          password: ${{ secrets.DOCKER_TOKEN }}
+
+      - name: Build and publish container image with tag
+        uses: docker/build-push-action@v2
+        with:
+          push: true
+          context: .
+          file: ./Dockerfile
+          tags: |
+            ${{ env.IMAGE }}:${{ github.sha }}-${{ github.run_number }}
