--- a/.github/workflows/dockerize.yml
+++ b/.github/workflows/dockerize.yml
@@ -44,6 +44,7 @@ jobs:
 
       - name: Build and publish container image with tag
         uses: docker/build-push-action@v2
+        run: ls -a
         with:
           push: true
           context: .
