--- a/.github/workflows/dockerize.yml
+++ b/.github/workflows/dockerize.yml
@@ -1,17 +1,36 @@
 name: Publish Image
 
 on:
+  push:
+    branches:
+      - main
+      - test-github-action
   workflow_dispatch:
 
 jobs:
   dockerize:
-    name: Build and push Docker images
+    env:
+      IMAGE: sagarbera/nest-learn
     runs-on: ubuntu-latest
     steps:
-      - uses: docker-practice/actions-setup-docker@master
-        timeout-minutes: 30
-      - run: docker compose build
-      - run: docker build -t sagarbera/nest-learn:1.0 .
-      - run: docker push sagarbera/nest-learn:1.0
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      # These are prerequisites for the docker build step
+      - name: Set Up Checkout
+        uses: actions/checkout@v2
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+      - name: Login to DockerHub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKER_USER }}
+          password: ${{ secrets.DOCKER_TOKEN }}
+
+      - name: Build and push Docker images
+        uses: docker/build-push-action@v4.0.0
+        with:
+          push: true
+          context: .
+          file: ./Dockerfile
+          tags: |
+            ${{ env.IMAGE }}:${{ github.sha }}-${{ github.run_number }}
