--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,17 +2,17 @@ version: '3.8'
 
 services:
   # API Backend
-  api:
-    build: ./
-    depends_on:
-      db:
-        condition: service_healthy
-    ports:
-      - 8000:8000
-    env_file:
-      - .env
-    networks:
-      - nest-network
+  # api:
+  #   build: ./
+  #   depends_on:
+  #     db:
+  #       condition: service_healthy
+  #   ports:
+  #     - 8000:8000
+  #   env_file:
+  #     - .env
+  #   networks:
+  #     - nest-network
   # Database
   db:
     image: postgres
